完善软件目录结构和文档
- 为 75 个软件目录补充完整脚本
- 每个目录包含：install.sh, version.sh, port.sh, backup.sh, restore.sh, healthcheck.sh, uninstall.sh, info.sh, config, README.md
- 完善大数据组件安装脚本
- 添加 SQLite 数据库组件
- 为所有目录生成完整文档